SQ 2.3 annotation instruction complete

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -338,7 +338,15 @@ If no proper carer blinding was described, then the sentences identified from th
 \subsection*{Signalling question - 2.3}
 \label{subsec:2_3}
 %
-Follow the Flowchart~\ref{fig:2_3} for annotation instructions of the signalling question, ``Were there deviations from the intended intervention that arose because of the trial context?''.
+This signalling question 2.3, ``Were there deviations from the intended intervention that arose because of the trial context?'' aims to assess the risk of bias associated with deviations from the intended intervention in a study.
+It seeks to determine whether any deviations occurred during the trial due to factors related to the trial context.
+The intended intervention refers to the specific treatment or intervention that is planned to be delivered to participants.
+Deviations from the intended intervention can occur for various reasons, such as practical challenges, implementation issues, or unforeseen circumstances within the trial context.
+This question focuses on assessing whether these deviations from the intended intervention were due to factors directly related to the trial itself rather than factors outside the trial.
+It helps evaluate the extent to which the trial protocol was followed and whether the trial results may have been influenced by these deviations.
+
+%
+%
 %
 \begin{figure}[hbt]
     \centering
@@ -347,19 +355,24 @@ Follow the Flowchart~\ref{fig:2_3} for annotation instructions of the signalling
     \label{fig:2_3}
 \end{figure}
 %
+%
+%
 
-
-The first diamond in the flowchart asks the annotators to search for quantities of deviation with a thought bubble hinting to them that these deviations are not the dropout rate in the trial.
-The diamond element also hints to the annotators that they can find this information in the text of the Results section, either within the allocation paragraph or the recruitment paragraph (green-coded arrow).
-If the information was not found within the Results section, look for it in the flowchart (either the flowcharts themselves or their captions).
-If no percentage deviation or the absolute number of deviations were identified in the text, do not annotate anything, and this document will be automatically marked as a ``no information'' for this signalling question following the arrow of ``no''.
-If the percentage of deviation was identified, then annotate the full sentence where this information is found.
-Next, go to the next diamond following the ``yes'' flow and judge whether these deviations were due to the trial context.
-If these deviations arose due to trial context, mark the annotated sentence(s) as ``2.3 Yes Bad'' and ``2.3 No Good'' otherwise.
-Additionally, if you identify the reason for your choice of ``no good'' and ''yes bad'' mark the sentences denoting the reason for your choice.
-In conclusion, you need to make a second annotation in this case if you have sentences to support your reason.
-Now the second diamond is quite subjective and you might not find the information, but at least you will have the annotated information about the percentage/number of deviations which could be used to train the machine learning models.
-We let the reviewers be a judge of the trial context once they discover the deviation information.
+Follow the Flowchart~\ref{fig:2_3} for annotation instructions of the signalling question, ``Were there deviations from the intended intervention that arose because of the trial context?''.
+In the flowchart, the first diamond prompts annotators to search for information regarding the number of deviations from the intended intervention.
+It clarifies that these deviations are not related to the dropout rate in the trial.
+The diamond also indicates that the information can be found in the text of the Results section, specifically within the allocation or recruitment paragraphs (indicated by the green-coded arrow).
+If the information is not found in the Results section, annotators should check the flowcharts themselves or their captions for any relevant details.
+If no percentage or absolute number of deviations is identified in the text, no annotation is necessary, and the document will be automatically marked as ``2.3 No Information'' for this signalling question, following the "No" arrow.
+If the percentage of deviations is identified, annotators should annotate the full sentence where this information is found.
+They should then proceed to the next diamond in the flowchart, following the "Yes" flow, and assess whether these deviations occurred due to the trial context.
+If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as "2.3 Yes Bad".
+If the deviations are not attributed to the trial context, they should be marked as "2.3 No Good".
+Additionally, if annotators identify the reasons for their choices of ``no good'' or ''yes bad'', they should mark the sentences explaining their rationale.
+It is important to note that a second annotation may be required if there are supporting sentences for the reason behind the choice.
+This second annotation allows for capturing additional information.
+The judgment regarding the trial context and deviations can be subjective, and it is left to the reviewers' discretion once they have access to the deviation information.
+However, at least you will have the annotated information about the percentage/number of deviations which could be used to train the machine learning models.
 Ultimately, the review of deviations and trial context is subjective, but the annotated information can be used to train machine learning models.
 %
 %
