--- a/sn-article.tex
+++ b/sn-article.tex
@@ -363,12 +363,12 @@ In the flowchart, the first diamond prompts annotators to search for information
 It clarifies that these deviations are not related to the dropout rate in the trial.
 The diamond also indicates that the information can be found in the text of the Results section, specifically within the allocation or recruitment paragraphs (indicated by the green-coded arrow).
 If the information is not found in the Results section, annotators should check the flowcharts themselves or their captions for any relevant details.
-If no percentage or absolute number of deviations is identified in the text, no annotation is necessary, and the document will be automatically marked as ``2.3 No Information'' for this signalling question, following the "No" arrow.
+If no percentage or absolute number of deviations is identified in the text, no annotation is necessary, and the document will be automatically marked as ``2.3 No Information'' for this signalling question, following the  ``No'' arrow.
 If the percentage of deviations is identified, annotators should annotate the full sentence where this information is found.
-They should then proceed to the next diamond in the flowchart, following the "Yes" flow, and assess whether these deviations occurred due to the trial context.
-If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as "2.3 Yes Bad".
-If the deviations are not attributed to the trial context, they should be marked as "2.3 No Good".
-Additionally, if annotators identify the reasons for their choices of ``no good'' or ''yes bad'', they should mark the sentences explaining their rationale.
+They should then proceed to the next diamond in the flowchart, following the ``Yes'' flow, and assess whether these deviations occurred due to the trial context.
+If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as ``2.3 Yes Bad''.
+If the deviations are not attributed to the trial context, they should be marked as ``2.3 No Good''.
+Additionally, if annotators identify the reasons for their choices of ``no good'' or ``yes bad'', they should mark the sentences explaining their rationale.
 It is important to note that a second annotation may be required if there are supporting sentences for the reason behind the choice.
 This second annotation allows for capturing additional information.
 The judgment regarding the trial context and deviations can be subjective, and it is left to the reviewers' discretion once they have access to the deviation information.
@@ -379,7 +379,22 @@ Ultimately, the review of deviations and trial context is subjective, but the an
 %
 \subsection*{Signalling question - 2.4 }
 %
-For annotation instructions for this signalling question, ``Were these deviations likely to have affected the outcome?'' follow the Flowchart~\ref{fig:2_4}.
+In randomized clinical trials, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
+These deviations are known as "protocol deviations" or "protocol violations."
+The question ``Were these deviations likely to have affected the outcome?'' in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study outcomes.
+If the identified deviations (using the previous questions) are determined to have a substantial likelihood of affecting the study outcomes, it suggests a higher risk of bias. 
+Conversely, if the deviations are deemed unlikely to have influenced the outcomes significantly, it indicates a lower risk of bias.
+Assessing the impact of deviations on the outcomes requires a thorough understanding of the study design, interventions, and potential sources of bias.
+It may involve considering factors such as the timing, frequency, and magnitude of the deviations, as well as their relevance to the study objectives and population under investigation.
+%Ultimately, the judgment regarding the influence of deviations on the outcomes is subjective and requires careful interpretation of the available information and expertise in the specific research domain.
+%The aim of this question is to assess the RoB due to the protocol deviations, which may have introduced systematic error or affected the internal validity of the study.
+%If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
+%However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
+%If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
+
+
+%
+%
 %
 \begin{figure}[hbt]
     \centering
@@ -388,17 +403,14 @@ For annotation instructions for this signalling question, ``Were these deviation
     \label{fig:2_4}
 \end{figure}
 %
+%
+%
+For annotation instructions for this signalling question, ``Were these deviations likely to have affected the outcome?'' follow the Flowchart~\ref{fig:2_4}.
+Before proceeding with the annotation, ensure that the previous question was not marked as ``2.3 No Good'' If it was, no annotation is required for this question. Otherwise, follow the instructions below.
 Do not annotate for this question if the answer to the previous question was ``2.3 No Good''; otherwise, follow the instructions below.
-In randomized clinical trials, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
-These deviations are known as "protocol deviations" or "protocol violations."
-The question "Were these deviations likely to have affected the outcome?" in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study results.
-The aim of this question is to assess the RoB due to the protocol deviations, which may have introduced systematic error or affected the internal validity of the study.
-If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
-However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
-If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
-To annotate the information from the previous question, we identify the percentage of deviation (a number) and annotate it, while for this question, we look for the reasons for these deviations and annotate them.
+To annotate the information pertaining to the previous question, the annotators identify the percentage of deviation (a number) and annotate them, while for this question, the annotators are prompted to look for the reasons for these deviations and annotate them.
 The reasons could be found in either the Results section or in the Method section if not in the Results section.
-If you identify the reason for this deviation and mark it, then follow the path along ``yes'' and judge whether these deviations could affect the outcome.
+If annotators identify the reason for this deviation, they mark it, then follow the path of ``yes'' and judge whether these deviations could affect the outcome.
 If they do, mark the annotated reason for deviation as ``2.4 Yes Bad'' and ``2.4 No Good''otherwise.
 For example, this sentence from Osteras 2019 Patient Reporting Quality of Care 6months IAA Hilfiker Sattelmayer with Protocol.pdf ... "['Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after their PT had attended the workshop.']" says that some participants went to different therapy "by error/mistake" which is a reason for the deviation, but as it was a small deviation, the annotator marked it as "no good".
 %
