SQ 2.4 instructions done

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -379,10 +379,10 @@ Ultimately, the review of deviations and trial context is subjective, but the an
 %
 \subsection*{Signalling question - 2.4 }
 %
-In randomized clinical trials, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
-These deviations are known as "protocol deviations" or "protocol violations."
+In RCTs, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
+These deviations are known as ``protocol deviations'' or ``protocol violations''.
 The question ``Were these deviations likely to have affected the outcome?'' in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study outcomes.
-If the identified deviations (using the previous questions) are determined to have a substantial likelihood of affecting the study outcomes, it suggests a higher risk of bias. 
+If the identified deviations (identified using the previous questions) are determined to have a substantial likelihood of affecting the study outcomes, it suggests a higher risk of bias. 
 Conversely, if the deviations are deemed unlikely to have influenced the outcomes significantly, it indicates a lower risk of bias.
 Assessing the impact of deviations on the outcomes requires a thorough understanding of the study design, interventions, and potential sources of bias.
 It may involve considering factors such as the timing, frequency, and magnitude of the deviations, as well as their relevance to the study objectives and population under investigation.
@@ -406,13 +406,16 @@ It may involve considering factors such as the timing, frequency, and magnitude 
 %
 %
 For annotation instructions for this signalling question, ``Were these deviations likely to have affected the outcome?'' follow the Flowchart~\ref{fig:2_4}.
-Before proceeding with the annotation, ensure that the previous question was not marked as ``2.3 No Good'' If it was, no annotation is required for this question. Otherwise, follow the instructions below.
-Do not annotate for this question if the answer to the previous question was ``2.3 No Good''; otherwise, follow the instructions below.
-To annotate the information pertaining to the previous question, the annotators identify the percentage of deviation (a number) and annotate them, while for this question, the annotators are prompted to look for the reasons for these deviations and annotate them.
-The reasons could be found in either the Results section or in the Method section if not in the Results section.
-If annotators identify the reason for this deviation, they mark it, then follow the path of ``yes'' and judge whether these deviations could affect the outcome.
-If they do, mark the annotated reason for deviation as ``2.4 Yes Bad'' and ``2.4 No Good''otherwise.
-For example, this sentence from Osteras 2019 Patient Reporting Quality of Care 6months IAA Hilfiker Sattelmayer with Protocol.pdf ... "['Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after their PT had attended the workshop.']" says that some participants went to different therapy "by error/mistake" which is a reason for the deviation, but as it was a small deviation, the annotator marked it as "no good".
+Before proceeding with the annotation, ensure that the previous question was not marked as ``2.3 No Good''.
+If it was, no annotation is required for this question.
+Otherwise, follow the instructions below.
+The first diamond prompts the annotators to identify the reasons for deviations and, if found, they mark it, then follow the connector path of ``yes'' and judge whether these deviations could affect the outcome.
+If the annotated reasons are likely to cause some deviation, then mark them as ``2.4 Yes Bad'' and ``2.4 No Good'' otherwise.
+The reasons could be found either in the Results section (main priority) or the Methods section (second priority).
+If the reasons for deviations are not found, then the question is assumed to have ``No Information''.
+%To annotate the information pertaining to the previous question, the annotators identify the percentage of deviation (a number) and annotate them, while for this question, the annotators are prompted to look for the reasons for these deviations and annotate them.
+%The reasons could be found in either the Results section or in the Method section if not in the Results section.
+%For example, this sentence from Osteras 2019 Patient Reporting Quality of Care 6months IAA Hilfiker Sattelmayer with Protocol.pdf ... "['Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after their PT had attended the workshop.']" says that some participants went to different therapy "by error/mistake" which is a reason for the deviation, but as it was a small deviation, the annotator marked it as "no good".
 %
 %
 %
