--- a/sn-article.tex
+++ b/sn-article.tex
@@ -421,7 +421,14 @@ If the reasons for deviations are not found, then the question is assumed to hav
 %
 \subsection*{Signalling question - 2.5 }
 %
-For annotation instructions for this signalling question, ``Were these deviations from the intended intervention balanced between groups??'' follow the Flowchart~\ref{fig:2_5}.
+This signalling question 2.5, ``Were these deviations from the intended intervention balanced between groups?'' aims to assess whether any deviations from the intended intervention were similar in frequency and severity across the different study groups (i.e., intervention group and control group) or whether one group had a greater number or severity of deviations than the other.
+Balanced deviations between groups are important for maintaining the internal validity of the study.
+If one group had a higher number or severity of deviations from the intended intervention than the other, it could potentially introduce bias and confound the results of the study.
+Therefore, it is important to assess whether deviations from the intended intervention were balanced between the groups when evaluating the risk of bias in an RCT.
+
+
+%
+%
 %
 \begin{figure}[hbt]
     \centering
@@ -430,18 +437,24 @@ For annotation instructions for this signalling question, ``Were these deviation
     \label{fig:2_5}
 \end{figure}
 %
-In the context of a randomized controlled trial (RCT), the intended intervention refers to the intervention that was supposed to be given to the study participants according to the study protocol. However, sometimes deviations from the intended intervention may occur due to various reasons, such as participant non-compliance or study staff error.
-
-The question "Were these deviations from the intended intervention balanced between groups?" is asking whether any deviations from the intended intervention were similar in frequency and severity across the different study groups (i.e., intervention group and control group) or whether one group had a greater number or severity of deviations than the other.
-
-Balanced deviations between groups are important for maintaining the internal validity of the study. If one group had a higher number or severity of deviations from the intended intervention than the other, it could potentially introduce bias and confound the results of the study. Therefore, it is important to assess whether deviations from the intended intervention were balanced between the groups when evaluating the risk of bias in an RCT.
-
-The first diamond in the flowchart asks the annotators to search for quantities of deviation with a thought bubble hinting to them that these deviations are not the dropout rate in the trial (to understand the difference between deviations and dropout, refer to subsection~\ref{subsec:2_3}).
-The main hook point is to identify quantities or numbers that show some kind of deviation from the intended intervention.
-If the deviations were balanced between the groups, mark the annotated deviations as ``2.5 Yes Good'' and ``2.5 No Bad'' otherwise.
-Now if you did not find any quantification of the deviations but found the text in the Discussion section saying that the deviations were not balanced, then mark such text in the discussion as ``2.5 No Bad''.
-If no text is marked, the document for this signalling question will be marked with a no information label.
 %
+%
+
+
+For annotation instructions for this signalling question, ``Were these deviations from the intended intervention balanced between groups?'' follow the Flowchart~\ref{fig:2_5}.
+The first diamond in the flowchart instructs annotators to search for quantities or numbers indicating deviations from the intended intervention.
+It is important to distinguish between deviations and dropout rates (refer to subsection~\ref{subsec:2_3} for clarification).
+Focus on identifying any numerical information that demonstrates deviations from the intended intervention.
+If the deviations are balanced between the groups, mark them as ``2.5 Yes Good''.
+If they are not balanced, mark them as ``2.5 No Bad''.
+In cases where no quantification of deviations is found, but the Discussion section mentions that the deviations were not balanced, mark that text in the discussion as ``2.5 No Bad''.
+If no text is marked, the document will receive a ``No Information'' label for this signalling question.
+%
+%
+%
+\subsection*{Signalling question - 2.6 }
+%
+
 %
 %
 %
