The figure for SQ 2.6 added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -458,6 +458,19 @@ If no text is marked, the document will receive a ``No Information'' label for t
 %
 %
 %
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/2_6.pdf}
+    \caption{Annotation instructions for the RoB 2.6 signalling question.}
+    \label{fig:2_6}
+\end{figure}
+%
+%
+%
+
+%
+%
+%
 \subsection*{Signalling question - 2.7 }
 %
 For annotation instructions for this signalling question, ``Was there potential for a substantial impact (on the result) of the failure to analyse participants in the group to which they were randomized?'' follow the Flowchart~\ref{fig:2_7}.
