SQ 2.6 annotation instructions done

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -449,11 +449,21 @@ If the deviations are balanced between the groups, mark them as ``2.5 Yes Good''
 If they are not balanced, mark them as ``2.5 No Bad''.
 In cases where no quantification of deviations is found, but the Discussion section mentions that the deviations were not balanced, mark that text in the discussion as ``2.5 No Bad''.
 If no text is marked, the document will receive a ``No Information'' label for this signalling question.
+Ensure that the annotation reflects the presence or absence of balanced deviations and consider both quantitative information and relevant discussion text to make an accurate annotation.
 %
 %
 %
 \subsection*{Signalling question - 2.6 }
 %
+The signalling question ``Was an appropriate analysis used to estimate the effect of assignment to intervention?'' aims to assess the adequacy of the analysis conducted to estimate the effect of assigning participants to different interventions in a study.
+The assignment of participants to interventions is a critical aspect that helps determine the causal relationship between the intervention and the outcomes.
+To ensure the validity and reliability of the study results, it is essential to use appropriate statistical methods and analytical techniques when estimating the effect of assignment to interventions.
+This signalling question focuses on evaluating whether the analysis performed in the study was appropriate and reliable in estimating the intervention's effect.
+The aim is to assess the risk of bias associated with the analysis methodology employed.
+An appropriate analysis involves using valid statistical tests, appropriate control for confounding variables, and proper consideration of potential sources of bias or confounding. 
+The goal is to minimize the risk of drawing incorrect conclusions or overestimating the effect of the intervention.
+By assessing the adequacy of the analysis, this signalling question helps evaluate the internal validity of the study and the confidence in the reported effect of the intervention.
+
 
 %
 %
@@ -468,6 +478,15 @@ If no text is marked, the document will receive a ``No Information'' label for t
 %
 %
 
+
+
+For annotation instructions regarding the signalling question ``Was an appropriate analysis used to estimate the effect of assignment to intervention?'' please refer to Flowchart~\ref{fig:2_6}.
+To clarify, the first diamond in the flowchart guides annotators to identify whether the study used ITT (Intent-to-Treat) or modified ITT analysis.
+ITT analysis is a method used to assess the effectiveness of an intervention by analyzing outcomes based on participants' initial assigned treatment group, regardless of whether they actually received the assigned treatment or not.
+If the annotators find information indicating the use of ITT analysis, they should mark and label the corresponding sentences as ``2.6 Yes Good''.
+Alternatively, if the study did not use ITT analysis and employed methods like naive ``per-protocol'' analysis or ``as treated" analysis to handle deviations from intended interventions, annotators should mark and label the relevant text as ``2.6 No Bad''.
+To locate this information, annotators should prioritize checking the Methods section, followed by the Results or Discussion section.
+If no information regarding ITT analysis, naive ``per-protocol'' analysis, or ``as treated'' analysis is found, it is assumed that no information is available to answer this question in the paper, and it should be labelled as ``No Information''.
 %
 %
 %
