SQ 3.1 annotation instructions in place

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -232,7 +232,7 @@ If you find any such information in the full-text mark it with the label ``1.3 N
 \section*{Annotation Guidelines for RoB domain 2}
 \label{sec:dom2}
 %
-The second risk domain of RoB 2 tool assess the risk of bias due to deviations from the intended interventions specifically focusing on the effect of assigned intervention.
+The second risk domain of the RoB 2 tool assesses the risk of bias due to deviations from the intended interventions, specifically focusing on the effect of the assigned intervention.
 In clinical trials, it is essential to ensure that participants in a study are assigned to the intended interventions accurately and that the interventions are administered as planned.
 However, there can be deviations or departures from the intended interventions, which may introduce bias and affect the reliability and validity of the study results.
 
@@ -253,11 +253,11 @@ Although both deviations from the intended intervention and dropout rates can po
 %
 The signalling question, ``Were participants aware of their assigned intervention during the trial?'' assess whether the clinical study performed proper blinding or masking of the trial participants.
 Blinding or masking of participants is an essential method to minimize the risk of bias due to participants' knowledge of their assigned intervention.
-When participants are not blinded, they may modify their behavior, expectations, or reports of outcomes, consciously or unconsciously, based on their knowledge of the assigned intervention, leading to a biased estimate of treatment effect.
+When participants are not blinded, they may modify their behaviour, expectations, or reports of outcomes, consciously or unconsciously, based on their knowledge of the assigned intervention, leading to a biased estimate of the treatment effect.
 However, if blinding was successfully applied, this may decrease the risk of bias and increase the internal validity of the study.
 Proper blinding of participants involves concealing the intervention to ensure that the participants do not know which intervention they received.
-Proper blinding of participants in physiotherapy and rehabilitation domains is challenging, so we discuss few blinding strategies for these domains. 
-Proper blinding in rehabilitation trials can be challenging, but several methods can be used to minimize the risk of bias due to the knowledge of the assigned intervention by the study participants and therapists. These methods include the use of placebo or sham interventions, for example, in studies of manual therapy, a sham therapy such as light touch or a placebo intervention like ultrasound can be used to blind the participants, and use of standardized interventions, therapist blinding, remote monitoring, and masking techniques.
+Proper blinding of participants in physiotherapy and rehabilitation domains is challenging, so we discuss a few blinding strategies for these domains. 
+Proper blinding in rehabilitation trials can be challenging, but several methods can be used to minimize the risk of bias due to the knowledge of the assigned intervention by the study participants and therapists. These methods include the use of placebo or sham interventions; for example, in studies of manual therapy, a sham therapy such as light touch or a placebo intervention like ultrasound can be used to blind the participants, and use of standardized interventions, therapist blinding, remote monitoring, and masking techniques.
 %Use of placebo or sham interventions: In some rehabilitation trials, a placebo or sham intervention can be used to blind the participants and therapists to the assigned intervention. For example, in studies of manual therapy, a sham therapy such as light touch or a placebo intervention like ultrasound can be used to blind the participants.
 %Use of standardized interventions: Standardized interventions can be used to ensure that all participants receive the same intervention regardless of the assigned group. This approach helps reduce the risk of bias and ensures that all participants receive the same level of care.
 %Use of therapist blinding: In some rehabilitation trials, therapists can be blinded to the assigned intervention. This approach is particularly useful when the intervention involves physical contact with the participant. For example, in studies of physical therapy, therapists can be trained to provide the same level of care and attention to all participants, regardless of the assigned intervention.
@@ -532,12 +532,30 @@ If the information is to be found nowhere except in a flowchart, mark the captio
 However, ensure that the flowchart annotation is your last resort.
 
 %If you find it in the flowchart, mark the caption and also ``included n=XX for ITT''. % Unfortunately, you cannot mark the flowchart because the new tool does not allow image annotation
-%Sometimes there could be disagreements here. Let's take for example, Solomons\_2020\_VISA\_A\_12months\_IAA\_Hilfiker\_Sattelmayer\_with\_Protocol.pdf where Martin marks "We did not impute or replace any missing values but rather fitted all the available data to the model" as No good. 
+%Sometimes, there could be disagreements here. Let's take, for example, Solomons\_2020\_VISA\_A\_12months\_IAA\_Hilfiker\_Sattelmayer\_with\_Protocol.pdf where Martin marks "We did not impute or replace any missing values but rather fitted all the available data to the model" as No good. 
 %However, what does the phrase "all the available data" mean? Maybe only 70\% of the outcomes data was available.
 %
 %
 %
+\section*{Annotation Guidelines for RoB domain 3}
+\label{sec:dom3}
+%
+Risk domain 3 in the revised Cochrane Risk of Bias (RoB) tool refers to the ``Bias due to deviations from intended interventions'' or ``Performance bias'' domain.
+This domain assesses the risk of bias resulting from differences in the delivery or receipt of the interventions being compared between the treatment groups.
+%
+%
+%
 \subsection*{Signalling question - 3.1 }
+%
+The question ``Were data for this outcome available for all, or nearly all Participants randomized?'' assesses the completeness of outcome data in a study.
+It aims to determine if data for the specific outcome of interest were collected and available for analysis for a high proportion of the participants who were initially randomized into the study.
+By evaluating this question, you can assess the risk of bias associated with missing or incomplete outcome data.
+If the data for the outcome of interest were not available for a substantial number of participants or if there was a high degree of missing data, it raises concerns about the potential impact on the validity and reliability of the study's findings.
+Adequate availability of outcome data for the majority of randomized participants enhances confidence in the study's results and reduces the risk of bias in this domain.
+
+
+%
+%
 %
 \begin{figure}[hbt]
     \centering
@@ -545,7 +563,16 @@ However, ensure that the flowchart annotation is your last resort.
     \caption{Annotation instructions for the RoB 3.1 signalling question.}
     \label{fig:3_1}
 \end{figure}
+%
+%
+%
 
+
+For annotation instructions for this signalling question, ``Were data for this outcome available for all, or nearly all Participants randomized?'' follow the Flowchart~\ref{fig:3_1}.
+Following the above explanation, the first diamond instructs the annotators to check the Results section (first priority) and the flowchart (second priority) to identify outcome data at the specific time point of interest.
+If the annotators find that the outcomes data were available for all or nearly all (at least 95\% of the total) participants, mark the text descriptions mentioning it and label it with ``3.1 Yes Good''.
+If the outcomes data were available for less than 95\% of participants randomized, then mark this information and label it with ``3.1 No Bad''.
+If no information regarding the availability of outcome data at the specified time point is found, consider the question as having ``No Information''.
 %
 %
 %
