--- a/sn-article.tex
+++ b/sn-article.tex
@@ -559,7 +559,7 @@ Adequate availability of outcome data for the majority of randomized participant
 %
 \begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{figures/3_1.pdf}
+    \includegraphics[width=0.95\textwidth]{figures/3_1.pdf}
     \caption{Annotation instructions for the RoB 3.1 signalling question.}
     \label{fig:3_1}
 \end{figure}
@@ -578,15 +578,8 @@ If no information regarding the availability of outcome data at the specified ti
 %
 \subsection*{Signalling question - 3.2 }
 %
-For annotation instructions for this signalling question, ``Is there evidence that the result was not biased by missing outcome data?'' follow the Flowchart~\ref{fig:3_2}.
-%
-\begin{figure}[hbt]
-    \centering
-    \includegraphics[width=\textwidth]{figures/3_2.pdf}
-    \caption{Annotation instructions for the RoB 3.2 signalling question.}
-    \label{fig:3_2}
-\end{figure}
-%
+The question ``Is there evidence that the result was not biased by missing outcome data?'' assesses the potential bias introduced by missing data in a study.
+It aims to evaluate whether there is sufficient evidence to conclude that the study's results were not influenced or biased due to missing outcome data.
 When answering this question, researchers evaluate whether the missing outcome data could have influenced the study's results in a biased manner.
 Missing outcome data can occur when participants drop out of a study, fail to provide data for certain outcomes, or when data is not collected as planned.
 The concern is that the missing data may introduce bias if it is related to the treatment being studied or if it differs systematically between the treatment groups.
@@ -594,14 +587,31 @@ To determine if there is evidence that the result was not biased by missing outc
 If there is a significant amount of missing data, especially if it is related to the outcomes being measured, it may increase the risk of bias.
 Researchers evaluate the strategies employed to handle missing data.
 This may involve techniques such as imputation (replacing missing values with estimated values) or sensitivity analyses to assess the impact of missing data on the results.
-To annotate for this signalling question, the annotators should specifically look for the anaylsis method that was used to handle or correct for the missing outcomes data.
-This analysis method could be, for example, Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), Pattern Mixture Models (PMM).
-The first diamond asks the annotators to look for this method.
-If the name of the analysis method is found, go to the next diamond which instructs the annotator to identify any method that was used to conduct sensitivity analysis.
-Did the study do some sensitivity analysis that shows that this change due to missing outcomes data or the different analysis methods used have a minor effect on how the intervention affects an outcome?
+To annotate for this signalling question, the annotators should specifically look for the analysis method that was used to handle or correct for the missing outcomes data.
+This analysis method could be, for example, Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), and Pattern Mixture Models (PMM).
+
+
+%
+%
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=0.95\textwidth]{figures/3_2.pdf}
+    \caption{Annotation instructions for the RoB 3.2 signalling question.}
+    \label{fig:3_2}
+\end{figure}
+%
+%
+%
+
+
+For annotation instructions for this signalling question, ``Is there evidence that the result was not biased by missing outcome data?'' follow the Flowchart~\ref{fig:3_2}.
+The first diamond asks the annotators to look for the use of one of these methods: Multiple Imputation (MI), Inverse Probability Weighting (IPW), Weighted Estimating Equations (WEE), and Pattern Mixture Models (PMM).
+If the use of the analysis method is found, go to the next diamond, which instructs the annotator to identify any method that was used to conduct sensitivity analysis.
+Did the study do some sensitivity analysis that shows that this change is due to missing outcomes data, or did the different analysis methods used have a minor effect on how the intervention affects an outcome?
 Then annotate these sentences containing the analysis method and sensitivity analysis and mark them with ``3.2 Yes Good''.
 By conducting sensitivity analyses, researchers can gain insight into the potential impact of missing data on the study's findings. This information helps to address concerns regarding bias and strengthens the overall validity and reliability of the study results.
-If no sensitivity analysis was done then mark the sentence containing method used to handle the missing data and label it as ``3.2 No Bad''.
+If no sensitivity analysis was done, then mark the sentence containing the method used to handle the missing data and label it as ``3.2 No Bad''.
 %
 %
 %
