--- a/sn-article.tex
+++ b/sn-article.tex
@@ -121,8 +121,9 @@ It is important to note that these generic annotation guidelines are supplementa
 \section*{Annotation Guidelines for RoB domain 1}
 \label{sec:dom1}
 %
-The first risk domain in the revised Cochrane Risk of Bias (RoB) 2.0 tool is referred to as ``Bias stemming from the randomization process.'' It encompasses two subdomains: ``Random sequence generation'' and ``Allocation concealment.''
-This domain evaluates the likelihood of bias associated with the randomization process, a crucial element in mitigating potential selection bias in randomized controlled trials (RCTs).
+The first risk domain in the RoB 2 tool is referred to as ``Bias stemming from the randomization process''.
+It encompasses two subdomains: ``Random sequence generation'' and ``Allocation concealment''.
+This domain evaluates the likelihood of bias associated with the randomization process, a crucial element in mitigating potential selection bias in RCTs.
 %
 %
 %
@@ -218,22 +219,22 @@ If there are significant differences in baseline characteristics between interve
 %
 %
 Follow the Flowchart~\ref{fig:1_3} for annotation instructions of the signalling question, ``Did baseline differences between intervention groups suggest a problem with the randomization process?''.
-Look for the answer in the table describing demographic and clinical baseline characteristics of study participants. 
+Look for the answer in the table describing the demographic and clinical baseline characteristics of study participants. 
 At this point, we request the annotators to mark the full table instead of one or two characteristics, as extracted table text from PDFs lacks the inherent structure necessary for training machine learning models.
 Therefore, it will be difficult to use the extracted table text to train the machine learning models. 
-If the table for baseline patient characteristics show excessive similarity or dissimilarity in the baseline characteristics that ARE NOT compatible with chance then mark the full table and table caption with the label ``1.3 Yes Bad'' otherwise mark the full table and the table caption with the label ``1.3 No Good''.
-If you did not find any table describing the baseline patient characteristics then the RCT study will be ultimately assumed as ``1.3 No Information'' for this SQ.
-In some cases, this table is missing, but there could be text description that could hint towards baseline differences that could act as confounding factors.
+If the table for baseline patient characteristics shows excessive similarity or dissimilarity in the baseline characteristics that ARE NOT compatible with chance, then mark the full table and table caption with the label ``1.3 Yes Bad'' otherwise, mark the full table and the table caption with the label ``1.3 No Good''.
+If you did not find any table describing the baseline patient characteristics, then the RCT study will be ultimately assumed as ``1.3 No Information'' for this SQ.
+In some cases, this table is missing, but there could be text descriptions that could hint towards baseline differences that could act as confounding factors.
 For instance, consider the following sentence, ``Because baseline ODI differences were a potential confounding factor, an adjusted multiple linear and logistic regression analysis was performed for each continuous and categorical outcome measure, respectively.''%~\citep{cohen2008randomized}
-If you find any such information in the full-text mark it with the label ``1.3 No Information'' .
+If you find any such information in the full text, mark it with the label ``1.3 No Information''.
 %
 %
 %
 \section*{Annotation Guidelines for RoB domain 2}
 \label{sec:dom2}
 %
-The second risk domain of the RoB 2 tool assesses the risk of bias due to deviations from the intended interventions, specifically focusing on the effect of the assigned intervention.
-In clinical trials, it is essential to ensure that participants in a study are assigned to the intended interventions accurately and that the interventions are administered as planned.
+The second risk domain of the RoB 2 tool (Bias due to deviations from intended interventions) assesses the risk of bias due to deviations from the intended interventions, specifically focusing on the effect of the assigned intervention.
+In RCTs, it is essential to ensure that participants in a study are assigned to the intended interventions accurately and that the interventions are administered as planned.
 However, there can be deviations or departures from the intended interventions, which may introduce bias and affect the reliability and validity of the study results.
 
 
@@ -540,8 +541,8 @@ However, ensure that the flowchart annotation is your last resort.
 \section*{Annotation Guidelines for RoB domain 3}
 \label{sec:dom3}
 %
-Risk domain 3 in the revised Cochrane Risk of Bias (RoB) tool refers to the ``Bias due to deviations from intended interventions'' or ``Performance bias'' domain.
-This domain assesses the risk of bias resulting from differences in the delivery or receipt of the interventions being compared between the treatment groups.
+Risk domain 3 (Bias due to missing outcome data) in the RoB 2 tool assesses the risk of bias associated with missing or incomplete outcome data in a study.
+This domain aims to evaluate whether there is a potential bias in how missing data is handled and reported, which can affect the validity and reliability of the RCT's findings.
 %
 %
 %
@@ -701,6 +702,14 @@ XOX
 %
 %
 %
+\section*{Annotation Guidelines for RoB domain 4}
+\label{sec:dom4}
+%
+Risk domain 4 (Bias in the measurement of the outcome) in the RoB 2 tool focuses on assessing the risk of bias related to the measurement of the outcome of interest in a study.
+This domain aims to evaluate whether there are potential sources of bias in how the outcome is assessed, including issues such as the blinding of outcome assessors and the reliability and validity of outcome measurement methods.
+%
+%
+%
 \subsection*{Signalling question - 4.1 }
 %
 \begin{figure}[hbt]
@@ -755,6 +764,17 @@ Could measurement or ascertainment of the outcome have differed between interven
     \caption{Annotation instructions for the RoB 4.5 signalling question.}
     \label{fig:4_5}
 \end{figure}
+%
+%
+%
+\section*{Annotation Guidelines for RoB domain 5}
+\label{sec:dom4}
+%
+Risk domain 5 in RoB 2 tool refers to the ``Bias in the selection of reported results'' domain.
+This domain assesses the risk of bias that may arise from the selective reporting of outcomes or analyses within a study.
+Selective reporting can lead to biased or incomplete reporting of results, which may distort the overall findings and affect the interpretation of the study's conclusions.
+The assessment of risk domain 5 helps determine whether the study has adequately reported all the intended outcomes and analyses as specified in the study protocol or pre-specified plans.
+This ensures transparency and reduces the risk of bias arising from selective reporting.
 %
 %
 %
