Summary of bias domains complete

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -123,6 +123,7 @@ It is important to note that these generic annotation guidelines are supplementa
 %
 The first risk domain in the RoB 2 tool is referred to as ``Bias stemming from the randomization process''.
 It encompasses two subdomains: ``Random sequence generation'' and ``Allocation concealment''.
+Randomization is a key methodological process in RCTs, designed to ensure that participants are assigned to different treatment groups in an unbiased and unpredictable manner.
 This domain evaluates the likelihood of bias associated with the randomization process, a crucial element in mitigating potential selection bias in RCTs.
 %
 %
@@ -233,13 +234,13 @@ If you find any such information in the full text, mark it with the label ``1.3 
 \section*{Annotation Guidelines for RoB domain 2}
 \label{sec:dom2}
 %
-The second risk domain of the RoB 2 tool (Bias due to deviations from intended interventions) assesses the risk of bias due to deviations from the intended interventions, specifically focusing on the effect of the assigned intervention.
+The second risk domain in the RoB 2 tool is referred to as ``Bias due to deviations from intended interventions''.
 In RCTs, it is essential to ensure that participants in a study are assigned to the intended interventions accurately and that the interventions are administered as planned.
-However, there can be deviations or departures from the intended interventions, which may introduce bias and affect the reliability and validity of the study results.
+However, there can be deviations or departures from the intended interventions when participants do not receive the assigned treatment or when they do not adhere to the prescribed regimen.
+This can happen for various reasons, such as non-compliance by participants, crossovers between treatment groups, or missing data due to dropout or loss to follow-up.
 
 
-
-Before detailing the annotation instructions for signalling questions for this domain, we clarify the difference between deviations from intended interventions and dropouts from the trial.
+Before detailing the annotation instructions for signalling questions, we clarify the difference between deviations from intended interventions and dropouts from the trial.
 Deviations from intended interventions are any unintentional changes that could have occurred in the intervention under investigation in the trial.
 For example, participants may not have complied with the study protocol, or there might have been problems with the delivery of the intervention that could have influenced the study outcomes.
 In contrast, dropouts refer to participants who withdrew from the study or were lost to follow-up.
@@ -541,7 +542,8 @@ However, ensure that the flowchart annotation is your last resort.
 \section*{Annotation Guidelines for RoB domain 3}
 \label{sec:dom3}
 %
-Risk domain 3 (Bias due to missing outcome data) in the RoB 2 tool assesses the risk of bias associated with missing or incomplete outcome data in a study.
+Domain 3 of the Revised Cochrane Risk of Bias (RoB) 2 tool addresses the potential ``Bias due to missing outcome data'' in a study.
+Bias due to missing outcome data refers to situations where the data for some participants are not available for analysis, and this missingness may be related to the outcomes being measured.
 This domain aims to evaluate whether there is a potential bias in how missing data is handled and reported, which can affect the validity and reliability of the RCT's findings.
 %
 %
@@ -705,7 +707,7 @@ XOX
 \section*{Annotation Guidelines for RoB domain 4}
 \label{sec:dom4}
 %
-Risk domain 4 (Bias in the measurement of the outcome) in the RoB 2 tool focuses on assessing the risk of bias related to the measurement of the outcome of interest in a study.
+The fourth risk domain in the RoB 2 tool is referred to as ``Bias in the measurement of the outcome'' for the outcome of interest.
 This domain aims to evaluate whether there are potential sources of bias in how the outcome is assessed, including issues such as the blinding of outcome assessors and the reliability and validity of outcome measurement methods.
 %
 %
